tests/ui/diagnostic-flags/deduplicate-diagnostics.duplicate.stderr
error[E0452]: malformed lint attribute input
  --> $DIR/deduplicate-diagnostics.rs:10:8
   |
LL | #[deny("literal")]
   |        ^^^^^^^^^ bad attribute argument

error: cannot find derive macro `Unresolved` in this scope
  --> $DIR/deduplicate-diagnostics.rs:6:10
   |
LL | #[derive(Unresolved)]
   |          ^^^^^^^^^^

error: cannot find derive macro `Unresolved` in this scope
  --> $DIR/deduplicate-diagnostics.rs:6:10
   |
LL | #[derive(Unresolved)]
   |          ^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0452]: malformed lint attribute input
  --> $DIR/deduplicate-diagnostics.rs:10:8
   |
LL | #[deny("literal")]
   |        ^^^^^^^^^ bad attribute argument
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0452]: malformed lint attribute input
  --> $DIR/deduplicate-diagnostics.rs:10:8
   |
LL | #[deny("literal")]
   |        ^^^^^^^^^ bad attribute argument
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0452`.
